# dutlink-cli

./: Cargo.toml  build.rs  dutlink-cli
manifests/: crd.yaml  device.yaml
proto/: dutlink.proto
src/: crd.rs  lib.rs
staging/: device.yaml  kubeconfig
