[package]
name = "dutlink-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.11.0"
prost = "0.12.6"
rusb = "0.9.4"
clap = { version = "4.5.7", features = ["derive"] }
kube = { version = "0.92.0", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
thiserror = "1.0.61"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
schemars = "0.8.21"
kube-derive = "0.92.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34"

[build-dependencies]
tonic-build = "0.11.0"
